@@ -1,3 +1,7 @@
+2004-05-10  Alan Harder <alan.harder@sun.com>  1.4.4-cvs-b103
+
+	* Regenerate highlights as needed when moving albums around.
+
 2004-05-10  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.4-cvs-b102
 
 	* Fixed alt="..." attribute in <img> tags to strip out HTML and then
